argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-http-service
spec:
  selector:
    app: spring-boot-http
  ports:
    - protocol: TCP
      port: 80        # The port accessible inside the cluster
      targetPort: 8089
      # If you're using SSL inside the container, set targetPort to 8443 or 443
      # port: 443
      # targetPort: 8443
