argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-https-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # If you use cert-manager for automatic Let's Encrypt:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - localhost
      secretName: my-ssl-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-http-service
                port:
                  number: 80
